--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,29 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <title>Robim's Blog!</title>
   </head>
   <body>
 
-    <h1> Welcome to Robim's blog! </h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="{% url 'home' %}">Robim's Blog</a>
+      <div class="collapse navbar-collapse" id="mynav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">About </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="http://www.facebook.com/">Link</a>
+          </li>
 
-    <h2>Latest Posts</h2>
+        </ul>
+      </div>
+    </nav>
 
-    {% for post in posts.all %}
 
-    <a href="{% url 'post_detail' post.id %}">{{ post.title}}</a>
-    <br/>
-    {{ post.pub_date_format}}
-    <br/>
-    <img src="{{post.image.url}}" />
-    <br/>
-    <br/>
-    {{ post.summary}}
-    <br/>
-    <br/>
-    {% endfor %}
+    <div class="container-fluid">
 
+      <h1 class="text-center">  Welcome to Robim's blog!
+        <br/>
+        {% load static %}
+        <img src="{% static 'posts/home_image.jpg' %}" style="max-height:350px;"/>
+      </h1>
+
+
+      <h2>Latest Posts</h2>
+    <hr/>
+      {% for post in posts.all %}
+
+      <a href="{% url 'post_detail' post.id %}"><h3>{{ post.title}}</h3></a>
+      <br/>
+      <h4><i class="far fa-calendar-alt"></i> {{ post.pub_date_format}}</h4>
+      <br/>
+      <img src="{{post.image.url}}" class="img-responsive center-block" style="max-height:150px;"/>
+      <br/>
+      <br/>
+      <p>{{ post.summary}}</p>
+      <br/>
+      <br/>
+      {% endfor %}
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
