--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="mynav">
         <ul class="navbar-nav ">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About </a>
+            <a class="nav-link" href="{% url 'about' %}">About </a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="http://www.facebook.com/">Link</a>
