--- a/sitepages/templates/sitepages/about.html
+++ b/sitepages/templates/sitepages/about.html
@@ -33,28 +33,14 @@
 
     <div class="container-fluid">
 
-      <h1 class="text-center">  Welcome to Robim's blog!
+      <h1 class="text-center">  About!
         <br/>
         {% load static %}
         <img src="{% static 'posts/home_image.jpg' %}" style="max-height:350px;"/>
       </h1>
+      <h2> Who is Robim!? </h2>
 
 
-      <h2>Latest Posts</h2>
-    <hr/>
-      {% for post in posts.all %}
-
-      <a href="{% url 'post_detail' post.id %}"><h3>{{ post.title}}</h3></a>
-      <br/>
-      <h4><i class="far fa-calendar-alt"></i> {{ post.pub_date_format}}</h4>
-      <br/>
-      <img src="{{post.image.url}}" class="img-responsive center-block" style="max-height:150px;"/>
-      <br/>
-      <br/>
-      <p>{{ post.summary}}</p>
-      <br/>
-      <br/>
-      {% endfor %}
   </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
